# FizzBuzz

./: .gitignore  Dockerfile  LICENSE  docker-compose.yml  pyproject.toml
src/api/: main.py
src/fizzbuzz/: __init__.py  main.py  router.py  service.py
src/fizzbuzz/routers/: fizzbuzz.py  stats.py
src/tracker/: database.py  decorator.py  router.py  service.py
tests/: conftest.py  test_fizzbuzz_router.py  test_fizzbuzz_service.py  test_health.py  test_tracker_router.py
