[project]
name = "fizzbuzz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Charef", email = "ccherrad@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
]

[project.scripts]
fizzbuzz = "api.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fizzbuzz", "src/tracker", "src/api"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
